# ImageOfCLife

./: CMakeLists.txt  debug.txt  gameOfLife.c  main.c
